--- a/src/views/regPage.html
+++ b/src/views/regPage.html
@@ -11,6 +11,30 @@
            Введите отчество<input type="text" name="patronymic"><br>
            Введите email<input type="email" name="email"><br>
            Введите должность<input type="text" name="position"><br>
+           Введите группу заинтересованных сторон, которую вы представляете
+           <select name="select" size="20" multiple>
+            <option selected value="Акционеры: Госкорпорация «Росатом»">Акционеры: Госкорпорация «Росатом»</option>
+            <option value="Поставщики, подрядчики">Поставщики, подрядчики</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+            <option value="s1">Чебурашка</option>
+
+           </select>
            Введите организацию<input type="text" name="organization"><br>
            Введите причину(интерес)<input type="text" name="interest"><br>
            Введите историю сотрудничества<input type="text" name="history"><br>
