--- a/src/views/registration.html
+++ b/src/views/registration.html
@@ -47,9 +47,65 @@
                                     <input class="form-control" type="email" name="email" placeholder="Email"><br>
                                     <input class="form-control" type="text" name="position" placeholder="Должность"><br>
                                     <input class="form-control" type="text" name="organization" placeholder="Организация"><br>
-                                    <textarea class="form-control" type="text" name="interest" placeholder="Причина(интерес)" rows="3"></textarea><br>
-                                    <textarea class="form-control" type="text" name="history" placeholder="История сотрудничества" rows="3"></textarea><br>
-                                    <input class="form-control" type="text" name="contact_information" placeholder="Контактная информация"><br>
+                                    <p class="group-interest">Введите группу заинтересованных сторон, которую вы представляете
+                                    <select name="group_select">
+                                        <option value="Акционеры: Госкорпорация «Росатом»">Акционеры: Госкорпорация «Росатом»</option>
+                                        <option value="Поставщики, подрядчики">Поставщики, подрядчики</option>
+                                        <option value="Потребители технологий, продукции и услуг на российском рынке и мировом рынке">Потребители технологий, продукции и услуг на российском рынке и мировом рынке</option>
+                                        <option value="Персонал Дивизиона и органы, представляющие его интересы: профсоюз, Совет молодых специалистов, Совет ветеранов">Персонал Дивизиона и органы, представляющие его интересы: профсоюз, Совет молодых специалистов, Совет ветеранов</option>
+                                        <option value="Конкуренты на мировом рынке технологий, продукции и услуг">Конкуренты на мировом рынке технологий, продукции и услуг</option>
+                                        <option value="Органы местного самоуправления в регионах присутствия">Органы местного самоуправления в регионах присутствия</option>
+                                        <option value="Органы контроля и надзора: Федеральная служба по экологическому, технологическому и атомному надзору">Органы контроля и надзора: Федеральная служба по экологическому, технологическому и атомному надзору</option>
+                                        <option value="Государственные органы зарубежных стран">Государственные органы зарубежных стран</option>
+                                        <option value="Международные организации и ассоциации, в т. ч. ядерного сектора: МАГАТЭ (IAEA), WANO, WNA, Агентство по атомной энергии, ОЭСР">Международные организации и ассоциации, в т. ч. ядерного сектора: МАГАТЭ (IAEA), WANO, WNA, Агентство по атомной энергии, ОЭСР</option>
+                                        <option value="Экспертное и профессиональное сообщество: Торгово-промышленная палата РФ, Российский союз промышленников и предпринимателей и др.">Экспертное и профессиональное сообщество: Торгово-промышленная палата РФ, Российский союз промышленников и предпринимателей и др.</option>
+                                        <option value="Рейтинговые агентства, аналитики рынка">Рейтинговые агентства, аналитики рынка</option>
+                                        <option value="Финансовые институты и инвестиционное сообщество">Финансовые институты и инвестиционное сообщество</option>
+                                        <option value="Научное сообщество: НИИ, Академия наук и др.">Научное сообщество: НИИ, Академия наук и др.</option>
+                                        <option value="Топ-менеджмент дочерних обществ">Топ-менеджмент дочерних обществ</option>
+                                        <option value="Население регионов присутствия (представители общественности)">Население регионов присутствия (представители общественности)</option>
+                                        <option value="Средства массовой информации">Средства массовой информации</option>
+                                        <option value="Образовательные учреждения: НИЯУ МИФИ, НГТУ, НГСУ, НГУ им. Н.И. Лобачевского, Ивановский государственный энергетический университет и др.">Образовательные учреждения: НИЯУ МИФИ, НГТУ, НГСУ, НГУ им. Н.И. Лобачевского, Ивановский государственный энергетический университет и др.</option>
+                                        <option value="Общественные организации (кроме экологических)">Общественные организации (кроме экологических)</option>
+                                        <option value="Экологические организации">Экологические организации</option>
+                                        <option selected value="Другое">Другое</option>
+                                    </select><br>
+                                    <input class="form-control" type="text" name="group_input" placeholder="Другое"></p>
+                                    <p class="group-interest">
+                                        Укажите  предмет интереса вашей организации к раскрываемой АО ИК «АСЭ» публичной информации. (Можно выбрать несколько ответов).<br>
+                                        <input type="checkbox" name="interest" value="Стратегия компании и показатели ее реализации"/>Стратегия компании и показатели ее реализации<br/>
+                                        <input type="checkbox" name="interest" value="Бизнес-модель"/>Бизнес-модель<br/> 
+                                        <input type="checkbox" name="interest" value="Рынки присутствия"/>Рынки присутствия<br/>
+                                        <input type="checkbox" name="interest" value="Риски и возможности"/>Риски и возможности<br/> 
+                                        <input type="checkbox" name="interest" value="Корпоративное управление"/>Корпоративное управление<br/> 
+                                        <input type="checkbox" name="interest" value="Результаты деятельности за отчетный период"/>Результаты деятельности за отчетный период<br/> 
+                                        <input type="checkbox" name="interest" value="Финансовый капитал"/>Финансовый капитал<br/> 
+                                        <input type="checkbox" name="interest" value="Природный капитал"/>Природный капитал<br/>
+                                        <input type="checkbox" name="interest" value="Производственный капитал"/>Производственный капитал<br/>  
+                                        <input type="checkbox" name="interest" value="Человеческий капитал"/>Человеческий капитал<br/>  
+                                        <input type="checkbox" name="interest" value="Социально-репутационный капитал"/>Социально-репутационный капитал<br/>  
+                                        <input type="checkbox" name="interest" value="Другое"/>Другое (укажите)<br/>  
+                                        <input class="form-control" type="text" name="interest" placeholder="Другое">
+                                    </p>
+                                    <p class="group-interest">
+                                        Укажите длительность стейкхолдерских взаимоотношений по вопросам публичной отчетности вас, как представителя вашей компании, с  АО ИК «АСЭ».<br>
+                                        <select name="time_select">
+                                                <option value="5 лет и более">5 лет и более</option>
+                                                <option value="2-4 года">2-4 года</option>
+                                                <option value="1 год">1 год</option>
+                                                <option selected value="Ранее не взаимодействовал с компанией по вопросам публичной отчетности">Ранее не взаимодействовал с компанией по вопросам публичной отчетности</option>
+                                        </select>
+                                    </p>
+                                    <p class="group-interest">
+                                            Укажите форматы, в которых вы взаимодельствовали с компанией по вопросам публичной отчётности (вопрос обязательный для тех, кто имел такой опыт).  Можно выбрать несколько ответов
+                                            <input type="checkbox" name="history" value="Определение существенных (приоритетных) тем отчета"/>Определение существенных (приоритетных) тем отчета<br/>
+                                            <input type="checkbox" name="history" value="Обсуждение концепции отчета"/>Обсуждение концепции отчета<br/>
+                                            <input type="checkbox" name="history" value="Общественные слушания проекта годового отчета"/>Общественные слушания проекта годового отчета<br/>
+                                            <input type="checkbox" name="history" value="Тематические диалоги с заинтересованными сторонами"/>Тематические диалоги с заинтересованными сторонами<br/>
+                                            <input type="checkbox" name="history" value="Другое"/>Другое (укажите)<br/>
+                                            <input class="form-control" type="text" name="history" placeholder="Другое">                                       
+                                    </p>
+                                    <input class="form-control" type="text" name="contact_information" placeholder="Контактная информация (телефон)"><br>
                                     <input class="form-control" type="text" name="address" placeholder="Место проживания"><br>
                                 <p>*тут будет капча*</p>
                                 <button class="auth-button btn btn-primary btn-block" type="submit">Регистрация</button>
@@ -60,6 +116,6 @@
         </div>
         <div class="col-md-3"></div>
     </div>
+    <h1>{{error}}</h1>
 </div>
-
 {% endblock %}
