--- a/src/views/templates/pageTemplate.html
+++ b/src/views/templates/pageTemplate.html
@@ -25,12 +25,21 @@
     </div>
       
     <div class="search col-lg-2 col-sm-3">
+            {%if sh%}
+            <div> <img src="/img/log.png" align="left"  class="img-log">{{sh.lastname}} {{sh.firstname[0]}}.{{sh.patronymic[0]}}.</div>
+            {%else%}
             <a href="/feedback" class="chat"><img src="/img/обратная-связь.png" align="left" class="img-chat">
             <div> Обратная связь</div> </a> 
+            {%endif%}
       <form action="/search/" method="POST" class="form-search">
         <input type="image" name="picture" src="/img/лупа.png"  width="20px">
         <input class="input-search" type="search" placeholder="Поиск" aria-label="Search" name="search">
       </form>
+      {%if sh%}
+      <form action="/lk/logout">
+        <input type="submit" value="выйти" class="auth-button btn btn-primary btn-block exit">
+      </form>
+      {%endif%}
     </div>
   </nav>
   <hr>
