--- a/src/views/fileNegotiationForAdmin.html
+++ b/src/views/fileNegotiationForAdmin.html
@@ -1,24 +1,16 @@
-<!doctype html>
-<html lang="rus">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends "templates/pageTemplate.html" %}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title></title>
-  </head>
-  <body>
+{% block content %}
+<link rel="stylesheet" href="/css/adminfile.css">
 
       <div class="container main">
           <h1>{{name}}</h1>
           <h3>{{description}}</h3>
           <h4>{{firstDate}} - {{lastDate}}</h4>
-          <p><a href={{ file }}>скачать файл</a></p>
+          <p><a href={{ file }} class="link">скачать файл</a></p>
           <p>Участники: 
               {% for item in access %}
-              <a href={{item}}>{{item}}</a> , 
+              < <a href={{item}} class="link">{{item}}</a> >
               {% endfor %}
           </p>
           <p>Согласовали: {% for agr in agreement %}
@@ -29,16 +21,12 @@
       <div class="container update">
         <form  method="POST" enctype="multipart/form-data">
           <p>Обновить файл: <input name="file" type="file"></p>
-          <p><input type="submit"></p>
+          <p><input type="submit" class="auth-button btn btn-primary btn-block but"></p>
         </form>
         <form method="POST" action="back">
-            <p><input type="submit" value="назад к списку"></p>
+            <p><input type="submit" value="назад к списку" class="auth-button btn btn-primary btn-block but"></p>
         </form>
       </div>
       <div class="container result">{{response}}</div>
       
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-   </body>
-</html>
+{% endblock %}
