--- a/src/views/lkadmin.html
+++ b/src/views/lkadmin.html
@@ -65,7 +65,7 @@
                     {% for name in negotiation %}
                     <tr>
                     <td>{{name}}</td>
-                    <td><a href='/fileNegotiation/admin/name{{name}}'>посмотреть</a></td>
+                    <td><a href='/fileNegotiation/admin/name{{name}}/'>посмотреть</a></td>
                     </tr>
                     {% endfor %}
                   </tbody>
