--- a/src/views/eventPage.html
+++ b/src/views/eventPage.html
@@ -9,13 +9,12 @@
 <hr>
     <div class="content row">
         <div class="col-xl-9 col-md-7 col-sm-7 col-6">
-        {% for event in events %}
           <div class="card flex-md-row mb-4 box-shadow h-md-250 cards">
           <img class="card-img-right flex-auto d-none d-lg-block mr-2" data-src="" alt="" style="width: 230px; height: 350px;" src="/file/{{event.img}}" data-holder-rendered="true">
               <div class="card-body d-flex flex-column align-items-start">
                 <h3 class="mb-0">
                   <img src="/img/event.png">
-                  <a class="text-dark" href="/events/id/{{event._id}}" >{{event.name}}</a>
+                  <a class="text-dark" href="/event/id/{{event._id}}" >{{event.name}}</a>
                 </h3>
                 
                 <div class="mb-1 text-muted mb-auto">{{event.creatingDate}}</div>
@@ -51,7 +50,6 @@
                 </div>
           </div>
             
-          {% endfor %}
     </div>
       
         {% include "templates/sideMenuTemplate.html" %}
