--- a/src/views/reportPage.html
+++ b/src/views/reportPage.html
@@ -1,9 +1,72 @@
 {% extends "templates/pageTemplate.html" %}
+
         <!-- Для шапки и футера однозначно нужен темплейт -->
 {% block content %}
+<link rel="stylesheet" href="/css/search.css">
+<link rel="stylesheet" href="/css/reports.css">
 {% include "templates/pageTopMenu.html" %}
-<div class="container-fluid">
-        <div class="row">
+
+<hr>
+    <div class="content row">
+        <div class="col-xl-9 col-md-7 col-sm-7 col-6">
+        {% for report in parametr %}
+          <div class="card flex-md-row mb-4 box-shadow h-md-250 cards">
+          <img class="card-img-right flex-auto d-none d-lg-block mr-2" data-src="" alt="" style="width: 280px; height: 400px;" src="/file/{{report.imgSrc}}" data-holder-rendered="true">
+              <div class="card-body d-flex flex-column align-items-start">
+                <h3 class="mb-0">
+                  <img src="/img/reports.png">
+                  <a class="text-dark" >{{report.name}}</a>
+                </h3>
+                
+                <div class="mb-1 text-muted mb-auto">{{report.creatingDate}}</div>
+                  <div class="container">
+                    <div class="row justify-content-around">
+                        <div class="mb-2"> 
+                            <h6>
+                                <img src="img/allreport.png"><a href="/file/{{ report.pdfSrc }}"> Cкачать pdf отчета на русском</a>
+                            </h6>
+                            <br>
+                            <h5 >
+                                <img src="img/revards.png"><a>Победы отчета в конкурсе</a>
+                                <div class="container">
+                                  <p>
+                                {{report.revards}}
+                                </p>
+                                </div>
+                            </h5>
+                           
+                            
+                          </div>   
+                          <div class="mb-2"> 
+                              <h6>
+                                  <img src="img/allreport.png"><a href="/file/{{ report.pdfEngSrc }}"> Cкачать pdf отчета на английском</a>
+                              </h6>
+                              <br>
+                              <h5>
+                                  <img src="img/standarts.png"><a>Соответствие международным стандартам</a>
+                                  <div class="container">
+                                      <p><img src="img/standart1.png"><img src="img/standart2.png">{{report.standarts}}</p>
+                                  </div>
+                              </h5>
+                              
+                              
+                          </div>  
+                  </div>
+                
+                  </div>
+                  <p class="card-text mb-auto"><img src="img/reportthems.png">Приоритетные темы отчета:</p>
+                  <div class="container">
+                      <span>{{report.thems}}</span>
+                  </div>
+                </div>
+          </div>
+            
+          {% endfor %}
+    </div>
+      
+        {% include "templates/sideMenuTemplate.html" %}
+    </div>
+<!-- <div class="content row">
           <div class="col-xl-9 col-md-7 col-sm-7 col-6">
               {% if(admin) %}
               <div class="col-md-2">
@@ -37,8 +100,8 @@
           {% endfor %}
           </div>
           {% include "templates/sideMenuTemplate.html" %}
-        </div>
-</div>
+        
+</div> -->
 
 <!-- <div class=" container">
         <h1 class="text-center">{{ paramebn }}</h1>
